[package]
name = "ceramic"
version = "0.3.0"
authors = ["Arvid E. Picciani <aep@exys.org>"]
license = "MIT"
description = "Synchronous channels between proccesses"
repository = "https://github.com/aep/ceramic-rust.git"
homepage = "https://github.com/aep/ceramic-rust"
documentation = "https://docs.rs/ceramic/"

[dependencies]
nix     = "0.7.0"
bincode = "0.6.1"
rustc-serialize = "0.3"
rain = "0.2.2"

